[tool.poetry]
name = "pomodorus"
version = "0.4.0"
description = "backend for the pomodorus project"
authors = ["Heitor Boschirolli <heitor.boschirolli>"]
license = "MIT"

[tool.poetry.scripts]
pomodorus = "pomodorus.app:main"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-SQLAlchemy = "^2.4.3"
python-dateutil = "^2.8.1"
mock = "^4.0.2"
flask-jwt-extended = "^3.24.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"
python-language-server = "^0.33.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
